# auto_trader

./: .dockerignore  .gitignore  CLAUDE.md  README.md  fly.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/auto_trader/: __init__.py  config.py
backend/auto_trader/api/: activity.py  app.py  deps.py  guard.py  schemas.py  sweep_apply.py  sweep_jobs.py  sweep_worker.py
backend/auto_trader/brokers/: _dealing.py  _ig_dealing.py  _market_hours.py  _mt5_hours.py  _prices.py  _session.py  base.py  capital.py  capital_stream.py  dukascopy.py  (+6 more)
backend/scripts/: check_capital.py  dukascopy_import.py  mt5_stream_spike.py
backend/strategies/: ema_cross.py  ema_trend.py
backend/tests/: conftest.py  test_analysis.py  test_analysis_rolling.py  test_api_backtest.py  test_api_backtest_analysis.py  test_api_backtest_coded.py  test_api_backtest_remote_htf.py  test_api_backtest_rule_sweep.py  test_api_backtest_sweep.py  test_api_backtest_sweep_dims.py  test_api_candles.py  test_api_compute_activity.py  test_api_compute_host.py  test_api_compute_proxy.py  test_api_cost_profiles.py  test_api_costs_wiring.py  test_api_evaluate_coded.py  test_api_guard.py  test_api_strategies.py  test_api_strategy_evaluate.py  test_api_sweep_archive.py  test_api_synthetic.py  test_backtest.py  test_backtest_hedging.py  test_backtest_inspector.py  test_backtest_mask.py  test_backtest_multi.py  test_backtest_signal_brackets.py  test_backtest_stops.py  test_bar_stats.py  test_broadcast_state.py  test_broker_health.py  test_broker_isolation.py  test_candle_accumulator.py  test_candle_aggregate.py  test_candle_cache.py  test_candles_derived.py  test_capital.py  test_capital_exec.py  test_capital_exec_env.py  (+58 more)
(+646 files in other folders)
