[project]
name = "auto-trader"
version = "0.1.0"
description = "Intraday trading app: backtesting, paper trading, and live trading with a TradingView-style chart."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "websockets>=14.0",
    "lightstreamer-client-lib>=2.2.2",
    "metaapi-cloud-sdk>=29.1.1",
    "numpy>=2.0",
    "dukascopy-python>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the backend root on sys.path so `scripts.*` (CLI helpers, not part of the
# wheel) import under pytest the same way `python -m scripts.X` runs them.
pythonpath = ["."]
